fix(frontend/style): adapt stat-result style to have a better contrast in dark mode

--- a/src/app/styles/components.css
+++ b/src/app/styles/components.css
@@ -24,7 +24,7 @@
   }
 
   .stat-result {
-    @apply absolute top-1/2 left-1/2 text-center font-bold text-2xl text-chetwode-blue-900 -translate-1/2;
+    @apply absolute top-1/2 left-1/2 text-center font-bold text-2xl text-chetwode-blue-900 -translate-1/2 dark:text-chetwode-blue-100;
   }
 
   .scrollbar-style {
